--- a/basic-setup/index.html
+++ b/basic-setup/index.html
@@ -8,16 +8,13 @@
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/babel-standalone@6.26.0/babel.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 <body>
-<div id="root">
-    <h1 id="hello"></h1>
-    <p id="list"></p>
-</div>
-<script type="text/babel">
-    ReactDOM.render("Helloooo React!!", document.getElementById("hello"));
-    ReactDOM.render(<ul><li>Hello</li><li>Worlllddddddd!</li></ul>, document.getElementById("list"));
+<div id="root"></div>
+<script src="./index.js" type="text/babel">
 </script>
 </body>
 </html>
